# mixedbag

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  mixedbag-config.cmake.in  vcpkg.json
docs/: CMakeLists.txt  mainpage.md
docs/main/: annotated.html  annotated_dup.js  bookkeeping__memory__resource_8hxx_source.html  classARo_1_1bookkeeping__memory__resource-members.html  classARo_1_1bookkeeping__memory__resource.html  classARo_1_1bookkeeping__memory__resource__inherit__graph.map  classARo_1_1bookkeeping__memory__resource__inherit__graph.md5  classARo_1_1sparse__vector-members.html  classARo_1_1sparse__vector.html  classARo_1_1sparse__vector.js  classes.html  dir_72faced6b4b8def3ab70bcc8c2c6d72b.html  dir_72faced6b4b8def3ab70bcc8c2c6d72b.js  dir_72faced6b4b8def3ab70bcc8c2c6d72b_dep.map  dir_72faced6b4b8def3ab70bcc8c2c6d72b_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  index.js  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  navtreedata.js  navtreeindex0.js  sparse__vector_8hxx_source.html
docs/main/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  (+5 more)
tests/: CMakeLists.txt  test_bookkeeping_memory_resource.cxx  test_sparse_vector.cxx
(+5 files in other folders)
